<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_examples</name>
  <version>0.0.1</version>
  <description>
    ROS2 launch examples
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/py_trees</url>-->
  <url type="repository">https://github.com/stonier/launch_examples</url>

  <author>Daniel Stonier</author>

  <build_depend>python3-setuptools</build_depend>

  <depend>demo_nodes_cpp</depend>
  <depend>demo_nodes_py</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros2launch</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
